fixed the flexwrap

--- a/main.css
+++ b/main.css
@@ -53,6 +53,7 @@
 .content{
     display: flex;
     justify-content: space-around;
+    flex-wrap: wrap;
 }
 
 .box{
